fix du problème de la partie "graphique" qui n'est plus visible quand la page est trop petite

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,10 +18,19 @@ body {
 
 #conteneur__1-1 {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
     grid-gap: 2rem;
     padding-top: 3rem;
    
+}
+
+
+@media only screen and (min-width: 600px) {
+    #conteneur__1-1 {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr;
+    }
 }
 
 
